# django-simple-reload

./: .gitignore  README.md  __init__.py  api.py  apps.py  consumer.py  pyproject.toml  update_watcher.py
django_simple_reload/: __init__.py  api.py  apps.py  update_watcher.py
django_simple_reload/templates/: reload-script.js
django_simple_reload/templatetags/: reload_script_utils.py
templates/: reload-script.js
templatetags/: reload_script_utils.py
