[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "django-simple-reload"
version = "0.1.0"
description = "Tiny Django Channels-based live reload helper"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2",
    "channels>=3",
    "asgiref>=3.6",
    "requests>=2",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
django_simple_reload = ["templates/*"]
